TestCases/Errors/Haversine/observations/sst/win_11_obs.spm
obs r15-c5 1e-08
obs r16-c5 1e-08
obs r15-c6 0.000108394356635811
obs r16-c6 4.63155944606549e-05
obs r15-c7 0.000210556973261126
obs r16-c7 1e-08
obs r14-c8 0.000404232900590577
obs r15-c8 0.000432525951557093
obs r3-c14 0.0605833333333333
obs r4-c14 0.00590551181102362
obs r6-c14 0.00459656084656085
obs r5-c15 0.0142204305045889
obs r6-c15 0.00818713450292398
obs r6-c16 0.00490646490999705
obs r7-c17 0.0167171600706594
obs r8-c17 0.0203579318667038
obs r9-c17 0.0147368421052632
obs r7-c18 0.0131320754716981
obs r8-c18 0.0231896751699484
obs r9-c18 0.0226211241673703
obs r7-c19 0.00540540540540541
obs r8-c19 0.0327777777777778
obs r9-c19 0.0341774056353004
obs r10-c19 0.0027032774462442
obs r11-c19 0.005706432650942
obs r8-c20 0.0103636363636364
obs r9-c20 0.00384313725490196
error_value r15-c5 0.2
error_value r16-c5 0.2
error_value r15-c6 0.2
error_value r16-c6 0.2
error_value r15-c7 0.2
error_value r16-c7 0.2
error_value r14-c8 0.2
error_value r15-c8 0.2
error_value r3-c14 0.2
error_value r4-c14 0.2
error_value r6-c14 0.2
error_value r5-c15 0.2
error_value r6-c15 0.2
error_value r6-c16 0.2
error_value r7-c17 0.2
error_value r8-c17 0.2
error_value r9-c17 0.2
error_value r7-c18 0.2
error_value r8-c18 0.2
error_value r9-c18 0.2
error_value r7-c19 0.2
error_value r8-c19 0.2
error_value r9-c19 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r8-c20 0.2
error_value r9-c20 0.2
